--- a/html/AppOverview.html
+++ b/html/AppOverview.html
@@ -30,7 +30,7 @@
       </nav>
 
       <div class="actions">
-        <a class="btn primary" href="./FeatureOverview.html">Explore</a>
+        <a class="btn primary" href="./UseCase.html">Use Cases</a>
       </div>
     </div>
   </div>
