--- a/html/FeatureOverview.html
+++ b/html/FeatureOverview.html
@@ -29,7 +29,7 @@
       </nav>
 
       <div class="actions">
-        <a class="btn primary" href="./UseCase.html">Use Cases</a>
+        <a class="btn primary" href="./AppOverview.html">App Overview</a>
       </div>
     </div>
   </div>
