--- a/AppOverview.html
+++ b/AppOverview.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="../css/styles.css" />
   <script defer src="../js/main.js"></script>
 </head>
-<body>
+
+<body class="page-app">
 <a class="skip" href="#main">Skip to content</a>
 
 <header>
@@ -15,14 +16,13 @@
     <div class="nav">
       <a class="brand" href="./Index.html">
         <img src="../images/logo.png" alt="SunSync logo" />
-         <div class="name"><span>App Overview</span></div>
+        <div class="name"><span>App Overview</span></div>
       </a>
-
 
       <nav class="navlinks" id="navlinks">
         <a href="./Index.html">Home</a>
         <a href="./FeatureOverview.html">Features</a>
-        <a href="./AppOverview.html">App Overview</a>
+        <a class="active" href="./AppOverview.html">App Overview</a>
         <a href="./UseCase.html">Use Cases</a>
         <a href="./TechSpec.html">Tech Spec</a>
         <a href="./OpenSource.html">Open Source</a>
@@ -43,9 +43,15 @@
     <div class="container">
       <div class="heroGrid">
 
+        <!-- LEFT -->
         <div>
-          <div class="kicker"><span class="dot"></span> Control, schedules, and insights</div>
+          <div class="kicker">
+            <span class="dot"></span>
+            Control, schedules, and insights
+          </div>
+
           <h1 class="appH1">App Overview</h1>
+
           <p class="lead">
             The SunSync app lets users control lighting modes, build routines, and view simple insights.
             It’s designed to be minimal: quick actions, clear presets, and optional personalisation.
@@ -57,12 +63,14 @@
           </div>
         </div>
 
-        <!-- Phone preview (uses placeholder divs if you don’t have images yet) -->
+        <!-- RIGHT -->
         <aside class="heroCard">
           <div class="heroCardInner">
+
             <div class="pill">Preview</div>
 
             <div class="phoneRow">
+
               <div class="phoneMock">
                 <div class="phoneTop"></div>
                 <div class="phoneScreen">
@@ -82,11 +90,13 @@
                   <div class="miniCard">Block distractions</div>
                 </div>
               </div>
+
             </div>
 
             <p class="lead" style="margin-top:14px;">
               Replace the mock screens with real screenshots later (Figma exports work perfectly).
             </p>
+
           </div>
         </aside>
 
@@ -106,11 +116,13 @@
           <h3>Dashboard</h3>
           <p>Quick access to presets, brightness slider, and current mode.</p>
         </div>
+
         <div class="card">
           <div class="pill">Routine</div>
           <h3>Schedule Builder</h3>
           <p>Create day ↔ night routines with gradual transitions and reminders.</p>
         </div>
+
         <div class="card">
           <div class="pill">Insights</div>
           <h3>Weekly Summary</h3>
@@ -127,6 +139,7 @@
       <p>These map directly to your project concept and will look good in a report.</p>
 
       <div class="split">
+
         <div class="panel warm">
           <div class="pill">Controls</div>
           <h3>Fast, minimal interaction</h3>
@@ -146,6 +159,7 @@
             <li>Silent visual reminders (glow alerts)</li>
           </ul>
         </div>
+
       </div>
     </div>
   </section>
@@ -156,8 +170,11 @@
       <div class="panel" style="display:flex;flex-wrap:wrap;align-items:center;justify-content:space-between;gap:14px;">
         <div>
           <h2 style="margin:0 0 6px;">Want the full breakdown?</h2>
-          <p style="margin:0;color:var(--muted);">See how the app supports the system features and technical design.</p>
+          <p style="margin:0;color:var(--muted);">
+            See how the app supports the system features and technical design.
+          </p>
         </div>
+
         <div style="display:flex;gap:10px;flex-wrap:wrap;">
           <a class="btn primary" href="./FeatureOverview.html">Features</a>
           <a class="btn secondary" href="./TechSpec.html">Tech Spec</a>
@@ -183,5 +200,6 @@
     </div>
   </div>
 </footer>
+
 </body>
 </html>
