--- a/Team.html
+++ b/Team.html
@@ -18,7 +18,6 @@
         <div class="name"><span>Team</span></div>
       </a>
 
-     
       <nav class="navlinks" id="navlinks">
         <a href="./Index.html">Home</a>
         <a href="./FeatureOverview.html">Features</a>
@@ -26,7 +25,7 @@
         <a href="./UseCase.html">Use Cases</a>
         <a href="./TechSpec.html">Tech Spec</a>
         <a href="./OpenSource.html">Open Source</a>
-        <a href="./Team.html">Team</a>
+        <a class="active" href="./Team.html">Team</a>
       </nav>
 
       <div class="actions">
@@ -41,31 +40,95 @@
     <div class="container">
       <div class="kicker"><span class="dot"></span> People behind the concept</div>
       <h1>Team</h1>
-      <p class="lead">Replace the placeholders with your real roles/names for submission.</p>
+      <p class="lead">Roles and responsibilities for the SunSync concept and prototype.</p>
     </div>
   </section>
 
   <section class="section">
-    <div class="container">
-      <div class="grid3">
-        <div class="card">
-          <div class="pill">Product</div>
-          <h3>Project Lead</h3>
-          <p>Owns the vision, scope, and user value of SunSync.</p>
+  <div class="container">
+
+    <div class="teamGrid">
+
+      <div class="teamCard">
+        <div class="teamTop">
+          <div class="avatar warm">L</div>
+          <div class="teamMeta">
+            <h3>Lakhan</h3>
+            <p class="primaryRole">Project Lead</p>
+          </div>
         </div>
-        <div class="card">
-          <div class="pill">Design</div>
-          <h3>UI/UX Designer</h3>
-          <p>Creates the app/website flows and visual system aligned to circadian themes.</p>
-        </div>
-        <div class="card">
-          <div class="pill">Tech</div>
-          <h3>Developer</h3>
-          <p>Builds prototypes, integrations, and documents the technical architecture.</p>
+        <div class="chipRow">
+          <span class="chip warm">Project Lead</span>
+          <span class="chip">App Development Lead</span>
+          <span class="chip">Systems Development</span>
         </div>
       </div>
+
+      <div class="teamCard">
+        <div class="teamTop">
+          <div class="avatar cool">Z</div>
+          <div class="teamMeta">
+            <h3>Zeeshan</h3>
+            <p class="primaryRole">UI/UX Designer</p>
+          </div>
+        </div>
+        <div class="chipRow">
+          <span class="chip cool">UI/UX Designer</span>
+          <span class="chip">Web Developer</span>
+          <span class="chip">Presentation Lead</span>
+        </div>
+      </div>
+
+      <div class="teamCard">
+        <div class="teamTop">
+          <div class="avatar">Y</div>
+          <div class="teamMeta">
+            <h3>Yuvraj</h3>
+            <p class="primaryRole">Videography</p>
+          </div>
+        </div>
+        <div class="chipRow">
+          <span class="chip">Video Editing</span>
+          <span class="chip">Scriptwriting</span>
+          <span class="chip warm">Videography</span>
+          <span class="chip">App UI Design</span>
+        </div>
+      </div>
+
+      <div class="teamCard">
+        <div class="teamTop">
+          <div class="avatar cool">L</div>
+          <div class="teamMeta">
+            <h3>Lee</h3>
+            <p class="primaryRole">Product UX &amp; Design Lead</p>
+          </div>
+        </div>
+        <div class="chipRow">
+          <span class="chip">Web Developer</span>
+          <span class="chip cool">Product UX &amp; Design Lead</span>
+        </div>
+      </div>
+
+      <div class="teamCard">
+        <div class="teamTop">
+          <div class="avatar">V</div>
+          <div class="teamMeta">
+            <h3>Victor</h3>
+            <p class="primaryRole">Systems Backend</p>
+          </div>
+        </div>
+        <div class="chipRow">
+          <span class="chip">App Development Support</span>
+          <span class="chip">System Management</span>
+          <span class="chip cool">Systems Backend</span>
+        </div>
+      </div>
+
     </div>
-  </section>
+
+  </div>
+</section>
+
 </main>
 
 <footer class="footer">
