--- a/AppOverview.html
+++ b/AppOverview.html
@@ -14,13 +14,14 @@
 <header>
   <div class="container">
     <div class="nav">
-      <a class="brand" href="./Index.html">
+
+      <a class="brand" href="./index.html" aria-label="Go to Home">
         <img src="../images/logo.png" alt="SunSync logo" />
         <div class="name"><span>App Overview</span></div>
       </a>
 
-      <nav class="navlinks" id="navlinks">
-        <a href="./Index.html">Home</a>
+      <nav class="navlinks" id="navlinks" aria-label="Primary">
+        <a href="./index.html">Home</a>
         <a href="./FeatureOverview.html">Features</a>
         <a class="active" href="./AppOverview.html">App Overview</a>
         <a href="./UseCase.html">Use Cases</a>
@@ -32,24 +33,18 @@
       <div class="actions">
         <a class="btn primary" href="./UseCase.html">Use Cases</a>
       </div>
+
     </div>
   </div>
 </header>
 
 <main id="main">
-
-  <!-- HERO -->
   <section class="hero">
     <div class="container">
       <div class="heroGrid">
 
-        <!-- LEFT -->
         <div>
-          <div class="kicker">
-            <span class="dot"></span>
-            Control, schedules, and insights
-          </div>
-
+          <div class="kicker"><span class="dot"></span> Control, schedules, and insights</div>
           <h1 class="appH1">App Overview</h1>
 
           <p class="lead">
@@ -63,14 +58,11 @@
           </div>
         </div>
 
-        <!-- RIGHT -->
-        <aside class="heroCard">
+        <aside class="heroCard" aria-label="App preview">
           <div class="heroCardInner">
-
             <div class="pill">Preview</div>
 
             <div class="phoneRow">
-
               <div class="phoneMock">
                 <div class="phoneTop"></div>
                 <div class="phoneScreen">
@@ -90,13 +82,11 @@
                   <div class="miniCard">Block distractions</div>
                 </div>
               </div>
-
             </div>
 
             <p class="lead" style="margin-top:14px;">
               Replace the mock screens with real screenshots later (Figma exports work perfectly).
             </p>
-
           </div>
         </aside>
 
@@ -104,7 +94,6 @@
     </div>
   </section>
 
-  <!-- CORE SCREENS -->
   <section class="section">
     <div class="container">
       <h2>Core screens</h2>
@@ -116,13 +105,11 @@
           <h3>Dashboard</h3>
           <p>Quick access to presets, brightness slider, and current mode.</p>
         </div>
-
         <div class="card">
           <div class="pill">Routine</div>
           <h3>Schedule Builder</h3>
           <p>Create day ↔ night routines with gradual transitions and reminders.</p>
         </div>
-
         <div class="card">
           <div class="pill">Insights</div>
           <h3>Weekly Summary</h3>
@@ -132,14 +119,12 @@
     </div>
   </section>
 
-  <!-- FEATURES -->
   <section class="section">
     <div class="container">
       <h2>App features</h2>
       <p>These map directly to your project concept and will look good in a report.</p>
 
       <div class="split">
-
         <div class="panel warm">
           <div class="pill">Controls</div>
           <h3>Fast, minimal interaction</h3>
@@ -159,20 +144,16 @@
             <li>Silent visual reminders (glow alerts)</li>
           </ul>
         </div>
-
       </div>
     </div>
   </section>
 
-  <!-- CTA -->
   <section class="section">
     <div class="container">
       <div class="panel" style="display:flex;flex-wrap:wrap;align-items:center;justify-content:space-between;gap:14px;">
         <div>
           <h2 style="margin:0 0 6px;">Want the full breakdown?</h2>
-          <p style="margin:0;color:var(--muted);">
-            See how the app supports the system features and technical design.
-          </p>
+          <p style="margin:0;color:var(--muted);">See how the app supports the system features and technical design.</p>
         </div>
 
         <div style="display:flex;gap:10px;flex-wrap:wrap;">
@@ -182,7 +163,6 @@
       </div>
     </div>
   </section>
-
 </main>
 
 <footer class="footer">
@@ -193,13 +173,12 @@
         <small>App Overview — controls, routines, and insights.</small>
       </div>
       <div class="footerLinks">
-        <a href="./Index.html">Home</a>
+        <a href="./index.html">Home</a>
         <a href="./UseCase.html">Use Cases</a>
         <a href="./TechSpec.html">Tech Spec</a>
       </div>
     </div>
   </div>
 </footer>
-
 </body>
 </html>
