--- a/TechSpec.html
+++ b/TechSpec.html
@@ -7,31 +7,33 @@
   <link rel="stylesheet" href="../css/styles.css" />
   <script defer src="../js/main.js"></script>
 </head>
+
 <body>
 <a class="skip" href="#main">Skip to content</a>
 
 <header>
   <div class="container">
     <div class="nav">
-      <a class="brand" href="./Index.html">
+
+      <a class="brand" href="./index.html" aria-label="Go to Home">
         <img src="../images/logo.png" alt="SunSync logo" />
         <div class="name"><span>Tech Spec</span></div>
       </a>
 
-
-      <nav class="navlinks" id="navlinks">
-        <a href="./Index.html">Home</a>
+      <nav class="navlinks" id="navlinks" aria-label="Primary">
+        <a href="./index.html">Home</a>
         <a href="./FeatureOverview.html">Features</a>
         <a href="./AppOverview.html">App Overview</a>
         <a href="./UseCase.html">Use Cases</a>
-        <a href="./TechSpec.html">Tech Spec</a>
+        <a class="active" href="./TechSpec.html">Tech Spec</a>
         <a href="./OpenSource.html">Open Source</a>
         <a href="./Team.html">Team</a>
       </nav>
 
       <div class="actions">
-        <a class="btn primary" href="./OpenSource.html">Open Source</a>
+        <a class="btn primary" href="./UseCase.html">Use Cases</a>
       </div>
+
     </div>
   </div>
 </header>
@@ -68,7 +70,7 @@
           <div class="pill">Warm</div>
           <h3>Wake + Wind-down</h3>
           <ul class="list">
-            <li>Sunrise ramp: 0% → 100% brightness over set duration</li>
+            <li>Sunrise ramp: 0% → 100% brightness over a set duration</li>
             <li>Warm colour temperature for evening relaxation</li>
           </ul>
         </div>
