--- a/AppOverview.html
+++ b/AppOverview.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SunSync | App Overview</title>
-  <link rel="stylesheet" href="../css/styles.css" />
-  <script defer src="../js/main.js"></script>
+  <link rel="stylesheet" href="./css/styles.css" />
+  <script defer src="./is/js/main.js"></script>
 </head>
 
 <body class="page-app">
@@ -14,13 +14,12 @@
 <header>
   <div class="container">
     <div class="nav">
-
-      <a class="brand" href="./index.html" aria-label="Go to Home">
-        <img src="../images/logo.png" alt="SunSync logo" />
+      <a class="brand" href="./index.html">
+        <img src="./images/Logo.png" alt="SunSync logo" />
         <div class="name"><span>App Overview</span></div>
       </a>
 
-      <nav class="navlinks" id="navlinks" aria-label="Primary">
+      <nav class="navlinks" id="navlinks">
         <a href="./index.html">Home</a>
         <a href="./FeatureOverview.html">Features</a>
         <a class="active" href="./AppOverview.html">App Overview</a>
@@ -31,22 +30,20 @@
       </nav>
 
       <div class="actions">
-        <a class="btn primary" href="./UseCase.html">Use Cases</a>
+        <a class="btn primary" href="./FeatureOverview.html">Explore</a>
       </div>
-
     </div>
   </div>
 </header>
 
 <main id="main">
+
   <section class="hero">
     <div class="container">
       <div class="heroGrid">
-
         <div>
           <div class="kicker"><span class="dot"></span> Control, schedules, and insights</div>
           <h1 class="appH1">App Overview</h1>
-
           <p class="lead">
             The SunSync app lets users control lighting modes, build routines, and view simple insights.
             It’s designed to be minimal: quick actions, clear presets, and optional personalisation.
@@ -58,7 +55,7 @@
           </div>
         </div>
 
-        <aside class="heroCard" aria-label="App preview">
+        <aside class="heroCard">
           <div class="heroCardInner">
             <div class="pill">Preview</div>
 
@@ -89,7 +86,6 @@
             </p>
           </div>
         </aside>
-
       </div>
     </div>
   </section>
@@ -105,11 +101,13 @@
           <h3>Dashboard</h3>
           <p>Quick access to presets, brightness slider, and current mode.</p>
         </div>
+
         <div class="card">
           <div class="pill">Routine</div>
           <h3>Schedule Builder</h3>
           <p>Create day ↔ night routines with gradual transitions and reminders.</p>
         </div>
+
         <div class="card">
           <div class="pill">Insights</div>
           <h3>Weekly Summary</h3>
@@ -155,7 +153,6 @@
           <h2 style="margin:0 0 6px;">Want the full breakdown?</h2>
           <p style="margin:0;color:var(--muted);">See how the app supports the system features and technical design.</p>
         </div>
-
         <div style="display:flex;gap:10px;flex-wrap:wrap;">
           <a class="btn primary" href="./FeatureOverview.html">Features</a>
           <a class="btn secondary" href="./TechSpec.html">Tech Spec</a>
@@ -163,6 +160,7 @@
       </div>
     </div>
   </section>
+
 </main>
 
 <footer class="footer">
@@ -180,5 +178,6 @@
     </div>
   </div>
 </footer>
+
 </body>
 </html>
