--- a/FeatureOverview.html
+++ b/FeatureOverview.html
@@ -4,23 +4,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SunSync | Feature Overview</title>
-  <link rel="stylesheet" href="../css/styles.css" />
-  <script defer src="../js/main.js"></script>
+  <link rel="stylesheet" href="./css/styles.css" />
+  <script defer src="./is/js/main.js"></script>
 </head>
-
 <body>
 <a class="skip" href="#main">Skip to content</a>
 
 <header>
   <div class="container">
     <div class="nav">
-
-      <a class="brand" href="./index.html" aria-label="Go to Home">
-        <img src="../images/logo.png" alt="SunSync logo" />
+      <a class="brand" href="./index.html">
+        <img src="./images/Logo.png" alt="SunSync logo" />
         <div class="name"><span>Feature Overview</span></div>
       </a>
 
-      <nav class="navlinks" id="navlinks" aria-label="Primary">
+      <nav class="navlinks" id="navlinks">
         <a href="./index.html">Home</a>
         <a class="active" href="./FeatureOverview.html">Features</a>
         <a href="./AppOverview.html">App Overview</a>
@@ -31,9 +29,8 @@
       </nav>
 
       <div class="actions">
-        <a class="btn primary" href="./UseCase.html">Use Cases</a>
+        <a class="btn primary" href="./FeatureOverview.html">Explore</a>
       </div>
-
     </div>
   </div>
 </header>
@@ -99,7 +96,17 @@
 
 <footer class="footer">
   <div class="container">
-    <small>© SunSync — Feature Overview</small>
+    <div class="footerGrid">
+      <div>
+        <strong>SunSync</strong><br />
+        <small>Features — MVP scope + extension ideas.</small>
+      </div>
+      <div class="footerLinks">
+        <a href="./index.html">Home</a>
+        <a href="./UseCase.html">Use Cases</a>
+        <a href="./TechSpec.html">Tech Spec</a>
+      </div>
+    </div>
   </div>
 </footer>
 </body>
