--- a/UseCase.html
+++ b/UseCase.html
@@ -4,23 +4,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SunSync | Use Cases</title>
-  <link rel="stylesheet" href="../css/styles.css" />
-  <script defer src="../js/main.js"></script>
+  <link rel="stylesheet" href="./css/styles.css" />
+  <script defer src="./is/js/main.js"></script>
 </head>
-
 <body>
 <a class="skip" href="#main">Skip to content</a>
 
 <header>
   <div class="container">
     <div class="nav">
-
-      <a class="brand" href="./index.html" aria-label="Go to Home">
-        <img src="../images/logo.png" alt="SunSync logo" />
+      <a class="brand" href="./index.html">
+        <img src="./images/Logo.png" alt="SunSync logo" />
         <div class="name"><span>Use Cases</span></div>
       </a>
 
-      <nav class="navlinks" id="navlinks" aria-label="Primary">
+      <nav class="navlinks" id="navlinks">
         <a href="./index.html">Home</a>
         <a href="./FeatureOverview.html">Features</a>
         <a href="./AppOverview.html">App Overview</a>
@@ -31,9 +29,8 @@
       </nav>
 
       <div class="actions">
-        <a class="btn primary" href="./UseCase.html">Use Cases</a>
+        <a class="btn primary" href="./FeatureOverview.html">Explore</a>
       </div>
-
     </div>
   </div>
 </header>
@@ -53,7 +50,7 @@
         <div class="card">
           <div class="pill">🌅 Morning</div>
           <h3>Sunrise wake-up</h3>
-          <p>Gradual light increases 20–30 minutes before your alarm, helping reduce grogginess.</p>
+          <p>Gradual light increases 20–30 minutes before alarm to reduce grogginess.</p>
         </div>
         <div class="card">
           <div class="pill">📚 Study</div>
@@ -65,6 +62,7 @@
           <h3>Wind-down routine</h3>
           <p>Warm dim mode in the last hour before sleep to promote relaxation.</p>
         </div>
+
         <div class="card">
           <div class="pill">🔔 Silent alerts</div>
           <h3>Notification glow</h3>
@@ -87,7 +85,17 @@
 
 <footer class="footer">
   <div class="container">
-    <small>© SunSync — Use Cases</small>
+    <div class="footerGrid">
+      <div>
+        <strong>SunSync</strong><br />
+        <small>Use Cases — real scenarios for students and professionals.</small>
+      </div>
+      <div class="footerLinks">
+        <a href="./index.html">Home</a>
+        <a href="./FeatureOverview.html">Features</a>
+        <a href="./TechSpec.html">Tech Spec</a>
+      </div>
+    </div>
   </div>
 </footer>
 </body>
