--- a/OpenSource.html
+++ b/OpenSource.html
@@ -4,23 +4,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SunSync | Open Source</title>
-  <link rel="stylesheet" href="../css/styles.css" />
-  <script defer src="../js/main.js"></script>
+  <link rel="stylesheet" href="./css/styles.css" />
+  <script defer src="./is/js/main.js"></script>
 </head>
-
 <body>
 <a class="skip" href="#main">Skip to content</a>
 
 <header>
   <div class="container">
     <div class="nav">
-
-      <a class="brand" href="./index.html" aria-label="Go to Home">
-        <img src="../images/logo.png" alt="SunSync logo" />
+      <a class="brand" href="./index.html">
+        <img src="./images/Logo.png" alt="SunSync logo" />
         <div class="name"><span>Open Source</span></div>
       </a>
 
-      <nav class="navlinks" id="navlinks" aria-label="Primary">
+      <nav class="navlinks" id="navlinks">
         <a href="./index.html">Home</a>
         <a href="./FeatureOverview.html">Features</a>
         <a href="./AppOverview.html">App Overview</a>
@@ -31,9 +29,8 @@
       </nav>
 
       <div class="actions">
-        <a class="btn primary" href="./UseCase.html">Use Cases</a>
+        <a class="btn primary" href="./FeatureOverview.html">Explore</a>
       </div>
-
     </div>
   </div>
 </header>
@@ -41,9 +38,9 @@
 <main id="main">
   <section class="hero">
     <div class="container">
-      <div class="kicker"><span class="dot"></span> Transparency &amp; collaboration</div>
+      <div class="kicker"><span class="dot"></span> Transparency & collaboration</div>
       <h1>Open Source Approach</h1>
-      <p class="lead">How SunSync could share parts of its ecosystem to support trust and extensibility.</p>
+      <p class="lead">How SunSync could share parts of its ecosystem for community trust and extensibility.</p>
     </div>
   </section>
 
@@ -53,17 +50,17 @@
         <div class="card">
           <div class="pill">Docs</div>
           <h3>Public documentation</h3>
-          <p>Setup guides, API outlines, and clear design rationale for contributors.</p>
+          <p>Setup guides, API outlines, and design rationale.</p>
         </div>
         <div class="card">
           <div class="pill">Interfaces</div>
           <h3>Open integrations</h3>
-          <p>Defined endpoints for routines, schedules, and mode triggers (future-ready).</p>
+          <p>Clear endpoints for routines, schedules, and mode triggers.</p>
         </div>
         <div class="card">
           <div class="pill">Community</div>
           <h3>Extensions</h3>
-          <p>Plugins for calendars, productivity tools, and custom presets built by the community.</p>
+          <p>Plugins for calendars, productivity tools, or custom presets.</p>
         </div>
       </div>
     </div>
@@ -72,7 +69,17 @@
 
 <footer class="footer">
   <div class="container">
-    <small>© SunSync — Open Source</small>
+    <div class="footerGrid">
+      <div>
+        <strong>SunSync</strong><br />
+        <small>Open Source — documentation, integration and extensibility.</small>
+      </div>
+      <div class="footerLinks">
+        <a href="./index.html">Home</a>
+        <a href="./TechSpec.html">Tech Spec</a>
+        <a href="./Team.html">Team</a>
+      </div>
+    </div>
   </div>
 </footer>
 </body>
