--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SunSync | Adaptive Smart Lamp</title>
-  <link rel="stylesheet" href="../css/styles.css" />
-  <script defer src="../js/main.js"></script>
+  <link rel="stylesheet" href="./css/styles.css" />
+  <script defer src="./is/js/main.js"></script>
 </head>
 
 <body>
@@ -14,13 +14,12 @@
 <header>
   <div class="container">
     <div class="nav">
-
-      <a class="brand" href="./index.html" aria-label="Go to Home">
-        <img src="../images/logo.png" alt="SunSync logo" />
+      <a class="brand" href="./index.html">
+        <img src="./images/Logo.png" alt="SunSync logo" />
         <div class="name"><span>Adaptive Smart Lamp</span></div>
       </a>
 
-      <nav class="navlinks" id="navlinks" aria-label="Primary">
+      <nav class="navlinks" id="navlinks">
         <a class="active" href="./index.html">Home</a>
         <a href="./FeatureOverview.html">Features</a>
         <a href="./AppOverview.html">App Overview</a>
@@ -31,26 +30,25 @@
       </nav>
 
       <div class="actions">
-        <a class="btn primary" href="./UseCase.html">Use Cases</a>
+        <a class="btn primary" href="./FeatureOverview.html">Explore</a>
       </div>
-
     </div>
   </div>
 </header>
 
 <main id="main">
 
+  <!-- HERO -->
   <section class="hero">
     <div class="container">
       <div class="heroGrid">
-
         <div>
           <div class="kicker">
             <span class="dot"></span>
             Circadian lighting, built for modern routines
           </div>
 
-          <img class="heroTitleImg" src="../images/Lamp.png" alt="SunSync lamp concept" loading="eager" />
+          <img class="heroTitleImg" src="./images/Lamp.png" alt="SunSync lamp concept" />
 
           <p class="lead">
             SunSync is a smart lamp concept that balances <strong>warm sunrise energy</strong> and
@@ -64,7 +62,7 @@
           </div>
         </div>
 
-        <aside class="heroCard" aria-label="At a glance">
+        <aside class="heroCard">
           <div class="heroCardInner">
             <div class="pill">At a glance</div>
 
@@ -92,11 +90,11 @@
             </p>
           </div>
         </aside>
-
       </div>
     </div>
   </section>
 
+  <!-- PROBLEM / SOLUTION -->
   <section class="section">
     <div class="container">
       <h2>Why SunSync exists</h2>
@@ -125,6 +123,7 @@
     </div>
   </section>
 
+  <!-- HOW IT WORKS -->
   <section class="section">
     <div class="container">
       <h2>How it works</h2>
@@ -150,7 +149,7 @@
 
       <div class="card" style="margin-top:14px;">
         <div class="pill">4</div>
-        <h3>Adaptive learning</h3>
+        <h3>Adaptive learning (optional extension)</h3>
         <p>
           SunSync can learn patterns (e.g. repeated late nights) and suggest adjustments to support healthier habits —
           without taking full control away from the user.
@@ -159,6 +158,7 @@
     </div>
   </section>
 
+  <!-- DAY / NIGHT PANELS -->
   <section class="section">
     <div class="container">
       <h2>Designed around the day ↔ night cycle</h2>
@@ -198,6 +198,7 @@
     </div>
   </section>
 
+  <!-- CTA -->
   <section class="section">
     <div class="container">
       <div class="panel" style="display:flex;flex-wrap:wrap;align-items:center;justify-content:space-between;gap:14px;">
