--- a/AppOverview.html
+++ b/AppOverview.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="../images/123.png">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SunSync | App Overview</title>
@@ -30,7 +31,7 @@
       </nav>
 
       <div class="actions">
-        <a class="btn primary" href="./FeatureOverview.html">Explore</a>
+        <a class="btn primary" href="./UseCase.html">Use Case</a>
       </div>
     </div>
   </div>
