--- a/FeatureOverview.html
+++ b/FeatureOverview.html
@@ -1,18 +1,21 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="../images/123.png">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SunSync | Feature Overview</title>
   <link rel="stylesheet" href="./css/styles.css" />
   <script defer src="./is/js/main.js"></script>
 </head>
-<body>
+
+<body class="page-features">
 <a class="skip" href="#main">Skip to content</a>
 
 <header>
   <div class="container">
     <div class="nav">
+
       <a class="brand" href="./index.html">
         <img src="./images/Logo.png" alt="SunSync logo" />
         <div class="name"><span>Feature Overview</span></div>
@@ -29,48 +32,70 @@
       </nav>
 
       <div class="actions">
-        <a class="btn primary" href="./FeatureOverview.html">Explore</a>
+        <a class="btn primary" href="./AppOverview.html">App Overview</a>
       </div>
+
     </div>
   </div>
 </header>
 
+<!-- LED FRAME WRAPPER -->
+<div class="ledFrame">
+
 <main id="main">
+
+  <!-- HERO -->
   <section class="hero">
     <div class="container">
-      <div class="kicker"><span class="dot"></span> Designed for real routines</div>
+      <div class="kicker">
+        <span class="dot"></span>
+        Designed for real routines
+      </div>
+
       <h1>Feature Overview</h1>
-      <p class="lead">A concise breakdown of what the system provides in an MVP, plus optional extensions.</p>
+
+      <p class="lead">
+        A concise breakdown of what the system provides in an MVP, plus optional extensions.
+      </p>
     </div>
   </section>
 
+  <!-- MVP FEATURES -->
   <section class="section">
     <div class="container">
       <h2>MVP features</h2>
+
       <div class="grid3">
+
         <div class="card">
           <div class="pill">Automation</div>
           <h3>Schedule-based lighting</h3>
           <p>Wake, focus, and wind-down presets with custom timing.</p>
         </div>
+
         <div class="card">
           <div class="pill">Comfort</div>
           <h3>Gradual transitions</h3>
-          <p>Smooth brightness and temperature shifts (no harsh jumps).</p>
+          <p>Smooth brightness and temperature shifts without harsh changes.</p>
         </div>
+
         <div class="card">
           <div class="pill">Control</div>
           <h3>App-style controls</h3>
-          <p>Brightness, modes, and saved routines through a simple interface.</p>
+          <p>Brightness, modes, and saved routines through a clean interface.</p>
         </div>
+
       </div>
     </div>
   </section>
 
+  <!-- EXTENSIONS -->
   <section class="section">
     <div class="container">
       <h2>Extensions</h2>
+
       <div class="split">
+
         <div class="panel warm">
           <div class="pill">Wellbeing</div>
           <h3>Routine insights</h3>
@@ -80,34 +105,31 @@
             <li>Personalised recommendations over time</li>
           </ul>
         </div>
+
         <div class="panel cool">
           <div class="pill">Smart integrations</div>
           <h3>Connected ecosystem</h3>
           <ul class="list">
-            <li>Calendar-based “focus blocks” lighting</li>
-            <li>Optional distraction-detection tie-in</li>
-            <li>Notification glow alerts (silent)</li>
+            <li>Calendar-based focus lighting</li>
+            <li>Optional distraction-detection integration</li>
+            <li>Silent notification glow alerts</li>
           </ul>
         </div>
+
       </div>
     </div>
   </section>
+
 </main>
+
+</div>
+<!-- END LED FRAME -->
 
 <footer class="footer">
   <div class="container">
-    <div class="footerGrid">
-      <div>
-        <strong>SunSync</strong><br />
-        <small>Features — MVP scope + extension ideas.</small>
-      </div>
-      <div class="footerLinks">
-        <a href="./index.html">Home</a>
-        <a href="./UseCase.html">Use Cases</a>
-        <a href="./TechSpec.html">Tech Spec</a>
-      </div>
-    </div>
+    <small>© SunSync — Feature Overview</small>
   </div>
 </footer>
+
 </body>
 </html>
