--- a/Team.html
+++ b/Team.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="../images/123.png">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SunSync | Team</title>
@@ -29,7 +30,7 @@
       </nav>
 
       <div class="actions">
-        <a class="btn primary" href="./FeatureOverview.html">Explore</a>
+        <a class="btn primary" href="./index.html">Home</a>
       </div>
     </div>
   </div>
