--- a/OpenSource.html
+++ b/OpenSource.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/png" href="../images/123.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/123.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/123.png">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SunSync | Open Source</title>
