--- a/OpenSource.html
+++ b/OpenSource.html
@@ -27,11 +27,12 @@
         <a href="./UseCase.html">Use Cases</a>
         <a href="./TechSpec.html">Tech Spec</a>
         <a class="active" href="./OpenSource.html">Open Source</a>
+        <a href="./MakingOf.html">Making Of</a>
         <a href="./Team.html">Team</a>
       </nav>
 
       <div class="actions">
-        <a class="btn primary" href="./Team.html">Team</a>
+        <a class="btn primary" href="./MakingOf.html">Making Of</a>
       </div>
     </div>
   </div>
