--- a/Team.html
+++ b/Team.html
@@ -27,6 +27,7 @@
         <a href="./UseCase.html">Use Cases</a>
         <a href="./TechSpec.html">Tech Spec</a>
         <a href="./OpenSource.html">Open Source</a>
+        <a href="./MakingOf.html">Making Of</a>
         <a class="active" href="./Team.html">Team</a>
       </nav>
 
@@ -54,7 +55,7 @@
           <div class="teamTop">
             <div class="avatar warm">L</div>
             <div class="teamMeta">
-              <h3>Lakhan</h3>
+              <h3>Lakhan Lothiyi</h3>
               <p class="primaryRole">Project Lead</p>
             </div>
           </div>
@@ -69,7 +70,7 @@
           <div class="teamTop">
             <div class="avatar cool">Z</div>
             <div class="teamMeta">
-              <h3>Zeeshan</h3>
+              <h3>Zeeshan Khaled</h3>
               <p class="primaryRole">UI/UX Designer</p>
             </div>
           </div>
@@ -84,7 +85,7 @@
           <div class="teamTop">
             <div class="avatar">Y</div>
             <div class="teamMeta">
-              <h3>Yuvraj</h3>
+              <h3>Yuvraj Dixit</h3>
               <p class="primaryRole">Videography</p>
             </div>
           </div>
@@ -100,12 +101,11 @@
           <div class="teamTop">
             <div class="avatar cool">L</div>
             <div class="teamMeta">
-              <h3>Lee</h3>
+              <h3>Lee Wheeler</h3>
               <p class="primaryRole">Product UX &amp; Design Lead</p>
             </div>
           </div>
           <div class="chipRow">
-            <span class="chip">Web Developer</span>
             <span class="chip cool">Product UX &amp; Design Lead</span>
           </div>
         </div>
@@ -114,7 +114,7 @@
           <div class="teamTop">
             <div class="avatar">V</div>
             <div class="teamMeta">
-              <h3>Victor</h3>
+              <h3>Victor Murgeneanu</h3>
               <p class="primaryRole">Systems Backend</p>
             </div>
           </div>
