--- a/TechSpec.html
+++ b/TechSpec.html
@@ -27,6 +27,7 @@
         <a href="./UseCase.html">Use Cases</a>
         <a class="active" href="./TechSpec.html">Tech Spec</a>
         <a href="./OpenSource.html">Open Source</a>
+        <a href="./MakingOf.html">Making Of</a>
         <a href="./Team.html">Team</a>
       </nav>
 
