--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <a href="./UseCase.html">Use Cases</a>
         <a href="./TechSpec.html">Tech Spec</a>
         <a href="./OpenSource.html">Open Source</a>
+        <a href="./MakingOf.html">Making Of</a>
         <a href="./Team.html">Team</a>
       </nav>
 
