--- a/MakingOf.html
+++ b/MakingOf.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SunSync | Making Of</title>
 
-  <!-- favicon (adjust if your path differs) -->
   <link rel="icon" href="./images/123.png" />
-
   <link rel="stylesheet" href="./css/styles.css" />
   <script defer src="./js/main.js"></script>
 </head>
@@ -58,12 +56,11 @@
           </p>
 
           <div class="heroBtns">
-            <a class="btn primary" href="/TechSpec.html">View Tech Spec</a>
+            <a class="btn primary" href="./TechSpec.html">View Tech Spec</a>
             <a class="btn secondary" href="./FeatureOverview.html">Features</a>
           </div>
         </div>
 
-        <!-- Apple-style “summary card” -->
         <aside class="heroCard reveal">
           <div class="heroCardInner">
             <div class="pill">At a glance</div>
@@ -87,9 +84,7 @@
               </div>
             </div>
 
-            <p class="lead" style="margin-top:14px;">
-
-            </p>
+            <p class="lead" style="margin-top:14px;"></p>
           </div>
         </aside>
 
@@ -101,8 +96,12 @@
   <section id="timeline" class="section">
     <div class="container">
 
-
       <div class="makingTimeline">
+
+        <!-- helper: placeholder media card -->
+        <!-- Swap a placeholder for a real image later by replacing the <div class="makingShot"> with:
+             <img src="./images/yourfile.png" alt="..." loading="lazy" />
+        -->
 
         <!-- 01 -->
         <article class="makingItem reveal" data-parallax>
@@ -124,9 +123,10 @@
           </div>
 
           <figure class="makingMedia">
-            <!-- Replace with your real image later -->
-            <img src="./images/idea.png" alt="Early concept notes / problem framing screenshot" loading="lazy" />
-            <figcaption>Replace with early notes / moodboard / brief.</figcaption>
+            <div class="makingShot">
+              <div class="makingShotTitle">Early concept notes / problem framing screenshot</div>
+              <div class="makingShotSub">Replace with early notes / moodboard / brief.</div>
+            </div>
           </figure>
         </article>
 
@@ -138,8 +138,8 @@
             <div class="pill">Stage 02</div>
             <h3>Planning</h3>
             <p>
-              With a clear concept, the next step was planning the design and build process in Figma: user flows, wireframes
-              and UI elements to ensure a consistent, polished prototype that effectively communicates the concept.
+              With a clear concept, the next step was planning the design and build process in Figma: user flows,
+              wireframes and UI elements to ensure a consistent, polished prototype.
             </p>
 
             <div class="makingMeta">
@@ -150,8 +150,10 @@
           </div>
 
           <figure class="makingMedia">
-            <img src="./images/design.png" alt="Figma wireframes / UI planning screenshot" loading="lazy" />
-            <figcaption>Replace with Figma screens / wireframes.</figcaption>
+            <div class="makingShot">
+              <div class="makingShotTitle">Figma wireframes / UI planning screenshot</div>
+              <div class="makingShotSub">Replace with Figma screens / wireframes.</div>
+            </div>
           </figure>
         </article>
 
@@ -163,9 +165,8 @@
             <div class="pill">Stage 03</div>
             <h3>Prototype Build</h3>
             <p>
-             Once everyone was aligned on the design, the build phase focused on translating Figma screens into a functional HTML/CSS/JS prototype.
-                The goal was to create a realistic experience that effectively demonstrates the concept and design.
-                Sticking to the planned structure and styles ensured a polished, professional result.
+              Once everyone aligned on the design, the build phase translated Figma screens into a functional HTML/CSS/JS
+              prototype. Keeping to the planned structure and styles ensured a polished result.
             </p>
 
             <div class="makingMeta">
@@ -176,8 +177,10 @@
           </div>
 
           <figure class="makingMedia">
-            <img src="./images/dev.png" alt="Development screenshot of code or page builds" loading="lazy" />
-            <figcaption>Replace with VS Code screenshot / commit view.</figcaption>
+            <div class="makingShot">
+              <div class="makingShotTitle">Development screenshot of code or page builds</div>
+              <div class="makingShotSub">Replace with VS Code screenshot / commit view.</div>
+            </div>
           </figure>
         </article>
 
@@ -189,8 +192,8 @@
             <div class="pill">Stage 04</div>
             <h3>Iteration & Fixes</h3>
             <p>
-              Final iteration focused on real-world issues like responsiveness, accessibility, and minor bugs. This stage is crucial for polishing the prototype and ensuring it’s a professional, user-friendly experience that effectively communicates the concept.
-             Iteration is a key part of the design process, allowing for continuous improvement and refinement based
+              Final iteration focused on responsiveness, accessibility, and minor bugs. Iteration is key for polishing the
+              prototype and making it feel professional and reliable.
             </p>
 
             <div class="makingMeta">
@@ -201,8 +204,10 @@
           </div>
 
           <figure class="makingMedia">
-            <img src="./images/final.png" alt="Final screenshot of the project" loading="lazy" />
-            <figcaption>Replace with final site screenshots.</figcaption>
+            <div class="makingShot">
+              <div class="makingShotTitle">Final screenshot of the project</div>
+              <div class="makingShotSub">Replace with final site screenshots.</div>
+            </div>
           </figure>
         </article>
 
